# ros_bag_player

./: README.md  profiles.yaml
src/rqt_bag_filter/: package.xml  plugin.xml  setup.cfg  setup.py
src/rqt_bag_filter/rqt_bag_filter/: bag_filter_plugin.py
