<?xml version="1.0"?>
<package format="3">
  <name>rqt_bag_filter</name>
  <version>0.1.0</version>
  <description>RQt plugin to play rosbag with topic filtering and YAML profiles</description>

  <maintainer email="dev@dev.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- <buildtool_depend>ament_cmake</buildtool_depend> -->
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>pyyaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
